# GroundUpNeuralNet

./: .gitignore  CMakeLists.txt  GroundUpNeuralNet.sln  README.md  main
.github/workflows/: cmake.yml  linter.sh
GroundUpNeuralNet/: GroundUpNeuralNet.vcxproj  GroundUpNeuralNet.vcxproj.filters  NeuralNet.h  main.cpp
GroundUpNeuralNet/src/: NeuralNet.cpp  NeuralNet.h
GroundUpNeuralNet/tests/: main.cpp
include/: BaseModule.h  Layer.h  Linear.h  RELU.h  Visitor.h
include/containers/: Container.h  Trainer.h
include/data/: Circle.h  Sine.h
include/layers/: BaseModule.h  LeakyReLU.h  Linear.h  RELU.h  ReLU.h  Sigmoid.h  Softmax.h  Tanh.h
include/layers/activations/: RELU.h
include/losses/: CE.h  CE.hpp  MSE.h  MSE.hpp
src/: CMakeLists.txt  Layer.cpp  Linear.cpp  RELU.cpp  main.cpp  model.csv
src/containers/: Container.cpp  Trainer.cpp
src/data/: Circle.cpp  Sine.cpp
src/layers/: LeakyReLU.cpp  Linear.cpp  RELU.cpp  ReLU.cpp  Sigmoid.cpp  Softmax.cpp  Tanh.cpp
src/layers/activations/: RELU.cpp
src/losses/: CE.cpp  MSE.cpp
tests/: CMakeLists.txt  main  main.cpp
tests/unit/: CETest.cpp  CMakeLists.txt  ContainerTest.cpp  LayerTest.cpp  LinearTest.cpp  MSETest.cpp  RELUTest.cpp  ReLUTest.cpp  SigmoidTest.cpp  SineTest.cpp  SoftmaxTest.cpp  TanhTest.cpp  VisitorTest.cpp
