# Setup build for automated testing
find_package(Git QUIET)

# Define all testing related content here
enable_testing()

include(FetchContent)
FetchContent_Declare(
        googletest
        URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

include_directories(${googletest_SOURCE_DIR}/googletest/include)

add_subdirectory(./unit)

# Include tests for remaining application parts
target_sources(test PRIVATE
        ./core.cpp
        ./main.cpp
        )